# scripta-lambda

./: .gitignore  Dockerfile  hello.py  lambda_function.py  lambda_handler.py  pyproject.toml  requirements.txt  songs.db  teste.ipynb
.github/workflows/: lambda-ecr.yaml
app/: cifraclub.py  lambda_function.py  models.py  prompts.py
app/cifra_club/: song_info.py  top_songs.py
app/core/: config.py  db.py  logger.py
app/llm/: prompts.py
app/models/: __init__.py  song.py
