[project]
name = "scripta-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.4",
    "langchain-groq>=0.2.1",
    "langchain>=0.3.6",
    "python-dotenv>=1.0.1",
    "wikipedia>=1.4.0",
]
